# NDKtest

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jyl/ndktest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  FFmpeg.cpp  FFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  constant.h  diff-lib.cpp  native-lib.cpp  safe_queue.cpp  safe_queue.h
app/src/main/java/com/jyl/ndktest/: DiffActivity.java  FirstActivity.java  MainActivity.java
app/src/main/java/com/jyl/ndktest/bean/: Person.java
app/src/main/java/com/jyl/ndktest/player/: Player.java
app/src/main/java/com/jyl/ndktest/util/: ELog.java
app/src/main/res/drawable/: button_bg.xml  button_bg_common.xml  button_bg_enable.xml  button_bg_press.xml
app/src/main/res/layout/: activity_diff.xml  activity_first.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: provider_paths.xml
app/src/test/java/com/jyl/ndktest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
